--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -13,9 +13,13 @@
 .banner h1 {
   font-size: 50px;
   font-weight: bolder;
+  margin: 0 !important;
+  padding: 5px;
 }
 
-.banner p {
+.banner-text p {
   font-size: 30px;
   font-weight: lighter;
+  margin: 0 !important;
+  padding: 20px;
 }
